More consistency in reserving names and labels of fields